refactor: Collectors.toList()를 Stream.toList()로 개선